--- a/odoo/local-src/tetras_school_management/views/student_views.xml
+++ b/odoo/local-src/tetras_school_management/views/student_views.xml
@@ -10,6 +10,7 @@
                         <field name="email"/>
                         <field name="phone"/>
                         <field name="birth_day"/>
+                        <field name="classe_id"/>
                     </group>
                     <group>
                         <field name="grade_ids">
